# blunderrr

./: .gitignore  CMakeLists.txt  README.md  board.c  bot.c  build-linux.sh  build-macos.sh  build-release.yml  build-windows.bat  chess.h  gitignore  komodo.txt  render.c
.github/workflows/: build-release.yml
structed/: Makefile  game_logic.c  input.c  main.c
